k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jurisconnect
  labels:
    app: jurisconnect
spec:
  type: LoadBalancer
  ports:
  - name: backend
    port: 80
    targetPort: 3000
    protocol: TCP
  - name: frontend
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: jurisconnect
